; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf_ruleset.c_pf_anchor_compare.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf_ruleset.c_pf_anchor_compare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pf_anchor = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pf_anchor*, %struct.pf_anchor*)* @pf_anchor_compare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pf_anchor_compare(%struct.pf_anchor* %0, %struct.pf_anchor* %1) #0 {
  %3 = alloca %struct.pf_anchor*, align 8
  %4 = alloca %struct.pf_anchor*, align 8
  %5 = alloca i32, align 4
  store %struct.pf_anchor* %0, %struct.pf_anchor** %3, align 8
  store %struct.pf_anchor* %1, %struct.pf_anchor** %4, align 8
  %6 = load %struct.pf_anchor*, %struct.pf_anchor** %3, align 8
  %7 = getelementptr inbounds %struct.pf_anchor, %struct.pf_anchor* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.pf_anchor*, %struct.pf_anchor** %4, align 8
  %10 = getelementptr inbounds %struct.pf_anchor, %struct.pf_anchor* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @strcmp(i32 %8, i32 %11)
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %5, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %2
  %16 = load i32, i32* %5, align 4
  %17 = icmp slt i32 %16, 0
  %18 = zext i1 %17 to i64
  %19 = select i1 %17, i32 -1, i32 1
  br label %21

20:                                               ; preds = %2
  br label %21

21:                                               ; preds = %20, %15
  %22 = phi i32 [ %19, %15 ], [ 0, %20 ]
  ret i32 %22
}

declare dso_local i32 @strcmp(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
